src/sass/_song.scss
.song {
  header {
    position: sticky;
    top: 0;

    .container {
      @include flex;

      nav.transposer {
        @include flex;
      }
    }
  }

  .song-content {
    padding: 1rem;

    .paragraph {
      margin-bottom: 1rem;

      .row {
        display: flex;
        flex-wrap: wrap;
        margin-bottom: 0.5rem;

        .column {
          margin-right: 0.1rem;

          .chord {
            color: $clr-primary;
            font-weight: 600;
            line-height: 1;

            &::after {
              // this is needed so empty chords don't mess up layout
              content: ".";
              color: transparent;
            }
          }

          .lyrics {
            font-size: 1.2rem;
          }
        }
      }
    }
  }

  .youtube {
    border-top: 1px solid $clr-accent;
    padding: 1rem;
    display: flex;
    justify-content: center;

    iframe {
      max-width: 100%;
    }
  }
}

